# comp0035_minimal_test

./: README.md  pyproject.toml
.github/workflows/: testing.yml
coursework2/: queries.py
tests/: conftest.py  test_queries.py
